# Fender

./: Cargo.toml  LICENSE  README.md  fender.bnf  quicksort.fndr  test.fndr
.github/workflows/: project_auto.yml  rust.yml
examples/: example_plugin.rs  fib.fndr  fib_demo.rs  quicksort.fndr  runner.rs  simple_blackjack.fndr  simple_if.rs  test.fndr  tmp
src/: error.rs  fender_reference.rs  fender_value.rs  interpreter.rs  iterator.rs  lazy_cell.rs  lib.rs  main.rs  operators.rs  plugin.rs  test.rs
src/error/: code_pos.rs  mod.rs  parent_type.rs
src/fender_value/: fender_structs.rs  iterator.rs
src/interpreter/: error.rs  lexical_scope.rs  mod.rs  module_loading.rs  namespacing.rs  parsing.rs  repl.rs
src/stdlib/: cast.rs  control_flow.rs  data.rs  io.rs  loader.rs  mod.rs  native_types.rs  system.rs  types.rs  val_operation.rs
src/stdlib/iterators/: list.rs  mod.rs
src/stdlib/native_types/: functions.rs  structs.rs
src/test/: exports.fndr  mod.rs  passByRef.fndr  quicksort.fndr
src/type_sys/: fender_reference.rs  freight_type_system.rs  type_id.rs  type_system.rs
src/type_sys/fender_reference/: internal_reference.rs  mod.rs
src/type_sys/fender_value/: fender_strings.rs  fender_structs.rs  iterator.rs  mod.rs
