[package]
name = "fender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
freight_vm = { git = "https://github.com/FenderLang/Freight", rev = "21159481ec8df27b643499ace41c5e4a1dbafe65", features = [
   "variadic_functions",
] }
flux_bnf = { git = "https://github.com/FenderLang/Flux", rev = "0b7b25e36313e76f0aa43d5f61b2f07a99322a72" }
rand = "0.8.5"
reedline = {version = "0.18.0", optional = true}
libloading = "0.8.0"

[features]
default = ["repl"]
repl = ["dep:reedline"]
